--- a/assets/css/style_light.scss
+++ b/assets/css/style_light.scss
@@ -3739,3 +3739,7 @@ input:focus {
     }
   }
 }
+
+.cookie-click{
+  cursor: pointer;
+}
